# gcp_functional_todos

./: CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
gcp_functional_todos/: __init__.py  cli.py  main.py
tests/: __init__.py  test_gcp_functional_todos.py
